# core

./: .dockerignore  .gitignore  CMakeLists.txt  CNAME  CODE_OF_CONDUCT.md  Dockerfile  Doxyfile  README.md  SECURITY.md  annotated.html  annotated_dup.js  build_linux.sh  build_win.bat  classes.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_13e138d54eb8818da29c3992edef070a.js  dir_313caf1132e152dd9b58bea13a4052ca.html  dir_313caf1132e152dd9b58bea13a4052ca.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_6c496015de1614d13058de4ecf5be780.html  dir_6c496015de1614d13058de4ecf5be780.js  dir_8191330cd755d8f4556907ebe03d7d97.html  dir_8191330cd755d8f4556907ebe03d7d97.js  dir_81993732a7f8d0acf49d44854e99b096.html  dir_81993732a7f8d0acf49d44854e99b096.js  dir_8509b06bafa958d2011203a730bf5778.html  dir_8509b06bafa958d2011203a730bf5778.js  dir_8746682e45593c7f1594a1f8a77263cc.html  dir_8746682e45593c7f1594a1f8a77263cc.js  dir_aebb8dcc11953d78e620bbef0b9e2183.html  dir_aebb8dcc11953d78e620bbef0b9e2183.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_d48e90ae5a9ae8c1065c4132e4c6116b.html  dir_d48e90ae5a9ae8c1065c4132e4c6116b.js  dir_d84abbe486a7f5f39e3c9088ffc1760a.html  dir_d84abbe486a7f5f39e3c9088ffc1760a.js  dir_ec61c36d729aab7e311dfb32fa99e774.html  dir_ec61c36d729aab7e311dfb32fa99e774.js  (+28 more)
.github/workflows/: docker-image.yml  docker-publish.yml  doxygen-gh-pages.yml
d0/d29/: main_8c.html  main_8c.js  main_8c_source.html
d0/d57/: unionWS__Core_1_1Args_1_1Arg_1_1Ranges-members.html
d0/da3/: structWS__Core_1_1Args_1_1Arg-members.html
d0/de8/: structWS__Core_1_1Args_1_1Value.html  structWS__Core_1_1Args_1_1Value.js
d0/dff/: help_8cpp.html  help_8cpp_source.html
d1/d19/: structWS__Core__Sensor-members.html
d1/d56/: namespaceWS__Core_1_1Routes_1_1Internal.html  structWS__Core__Device-members.html
d1/d8c/: logger_8h.html  logger_8h.js  logger_8h_source.html
d1/dad/: structWS__Core_1_1Args_1_1Arg_1_1Ranges_1_1Double.html  structWS__Core_1_1Args_1_1Arg_1_1Ranges_1_1Double.js
d1/dc7/: namespaceWS__Core_1_1Help.html
d2/dca/: structWS__Core_1_1Args_1_1Arg_1_1Ranges_1_1Double-members.html
d3/dc2/: ws__frontend_2ws_8h.html  ws__frontend_2ws_8h.js  ws__frontend_2ws_8h_source.html
d5/d2e/: sensor_8h.html  sensor_8h.js  sensor_8h_source.html
d5/d60/: utils_8h.html  utils_8h.js  utils_8h_source.html
d5/d90/: commands_8h.html  commands_8h.js  commands_8h_source.html
d6/d17/: ws__core_2ws_8h.html  ws__core_2ws_8h.js  ws__core_2ws_8h_source.html
d7/d27/: ws__frontend_2types_2args_8h.html  ws__frontend_2types_2args_8h.js  ws__frontend_2types_2args_8h_source.html
d7/d55/: structWS__Utils__Arg.html  structWS__Utils__Arg.js
d7/d7f/: unionWS__Core_1_1Args_1_1Arg_1_1Default-members.html
d8/dae/: ws__utils_2args_8h.html  ws__utils_2args_8h.js  ws__utils_2args_8h_source.html
d8/dd0/: namespaceWS__Core_1_1Routes_1_1External.html
d9/d2f/: test__all_8cpp.html  test__all_8cpp_source.html
d9/dad/: namespaceWS__Core_1_1Routes.html  namespaceWS__Core_1_1Routes.js
d9/db6/: structcompare__strings-members.html
da/d7d/: args_8cpp.html  (+2 more)
patches/: catflare.patch
src/: CMakeLists.txt
src/core/: CMakeLists.txt  args.cpp  help.cpp  main.cpp  utils.cpp
src/frontend/: CMakeLists.txt  args.cpp  help.cpp  main.cpp  utils.cpp
src/utils/: CMakeLists.txt  commands.c  main.c  main.cpp
test/: CMakeLists.txt  README.md  test.cpp  test_all.cpp
test/tests/: test_macros.cpp
(+78 files in other folders)
